--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -37,6 +37,15 @@
   timestamp = {2019.04.01},
 }
 
+@Book{Abrams1999,
+  title     = {A Glossary of Literary Terms},
+  publisher = {Harcourt Brace College Publisher},
+  year      = {1999},
+  author    = {Abrams, M. H.},
+  owner     = {Vincent},
+  timestamp = {2019.04.09},
+}
+
 @Article{Adams2002,
   author    = {Adams, B. and Dorai, C. and Venkatesh, S.},
   title     = {Toward automatic extraction of expressive elements from motion pictures: tempo},
@@ -1168,6 +1177,19 @@
   url       = {https://www.panmacmillan.com/authors/jonathan-bate/the-genius-of-shakespeare/9781509822546},
 }
 
+@Article{Bavelas1948,
+  author    = {Bavelas, A.},
+  title     = {A Mathematical Model for Group Structures},
+  journal   = {Human Organization},
+  year      = {1948},
+  volume    = {7},
+  number    = {3},
+  pages     = {16-30},
+  doi       = {10.17730/humo.7.3.f4033344851gl053},
+  owner     = {Vincent},
+  timestamp = {2019.04.09},
+}
+
 @Article{Bavelas1950,
   author    = {Bavelas, A.},
   title     = {Communication patterns in task-oriented groups},
@@ -1230,6 +1252,16 @@
   doi       = {10.1109/IOTA.2016.7562715},
   owner     = {Vincent},
   timestamp = {2016.09.13},
+}
+
+@InProceedings{Bekkerman2004,
+  author    = {Bekkerman, R. and Culotta, A. and McCallum, A.},
+  title     = {Extracting social networks and contact information from email and the web},
+  booktitle = {1st Conference on Email and Anti-Spam},
+  year      = {2004},
+  owner     = {Vincent},
+  timestamp = {2019.04.09},
+  url       = {https://apps.dtic.mil/docs/citations/ADA439422},
 }
 
 @Article{BelloOrgaz2016,
@@ -1336,6 +1368,17 @@
   doi       = {10.1109/cvpr.2004.1315253},
   owner     = {Vincent},
   timestamp = {2019.03.31},
+}
+
+@InProceedings{Berger-Wolf2006,
+  author    = {Berger-Wolf, T. Y. and Saia, J.},
+  title     = {A framework for analysis of dynamic social networks},
+  booktitle = {12th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
+  year      = {2006},
+  pages     = {523-528},
+  doi       = {10.1145/1150402.1150462},
+  owner     = {Vincent},
+  timestamp = {2012.08.24},
 }
 
 @Article{Bernard1988,
@@ -1698,6 +1741,19 @@
   url       = {https://www.mhprofessional.com/9780073535104-usa-film-art-an-introduction},
 }
 
+@Article{Borgatti2003,
+  author    = {Borgatti, S. P. and Cross, R.},
+  title     = {A Relational View of Information Seeking and Learning in Social Networks},
+  journal   = {Management Science},
+  year      = {2003},
+  volume    = {49},
+  number    = {4},
+  pages     = {432-445},
+  owner     = {Vincent},
+  timestamp = {2019.04.09},
+  url       = {https://www.jstor.org/stable/4133949},
+}
+
 @InProceedings{Borin2007,
   author    = {Borin, L. and Kokkinakis, D. and Olsson, L.-J.},
   title     = {Naming the Past: Named Entity and Animacy Recognition in 19th Century Swedish Literature},
@@ -1912,6 +1968,18 @@
   doi       = {10.1007/3-540-63938-1_66},
   owner     = {Vincent},
   timestamp = {2019.03.23},
+}
+
+@Article{Brandes2001,
+  author    = {Brandes, U. and Raab, J. and Wagner, D.},
+  title     = {Exploratory network visualization: Simultaneous display of actor status and connections},
+  journal   = {Journal of Social Structure},
+  year      = {2001},
+  volume    = {2},
+  number    = {4},
+  owner     = {Vincent},
+  timestamp = {2019.04.09},
+  url       = {http://nbn-resolving.de/urn:nbn:de:bsz:352-opus-72102},
 }
 
 @Article{Brandes2003,
@@ -2158,6 +2226,19 @@
   doi       = {10.1109/tvcg.2011.226},
   owner     = {Vincent},
   timestamp = {2019.03.23},
+}
+
+@Article{Burges1998,
+  author    = {Burges, C. J. C.},
+  title     = {A Tutorial on Support Vector Machines for Pattern Recognition},
+  journal   = {Data Mining and Knowledge Discovery},
+  year      = {1998},
+  volume    = {2},
+  number    = {2},
+  pages     = {121-167},
+  doi       = {10.1023/a:1009715923555},
+  owner     = {Vincent},
+  timestamp = {2019.04.09},
 }
 
 @Book{Burnett2011,
@@ -2407,6 +2488,16 @@
   doi       = {10.1109/tcsvt.2012.2211935},
   owner     = {Vincent},
   timestamp = {2019.03.27},
+}
+
+@InProceedings{Carley2003,
+  author    = {Carley, K. M.},
+  title     = {Dynamic network analysis},
+  booktitle = {Dynamic Social Network Modeling and Analysis Workshop},
+  year      = {2003},
+  pages     = {133-145},
+  owner     = {Vincent},
+  timestamp = {2019.04.09},
 }
 
 @Book{Carroll1995,
@@ -2706,6 +2797,17 @@
   doi       = {10.1007/s10618-010-0186-6},
   owner     = {Vincent},
   timestamp = {2019.03.30},
+}
+
+@InProceedings{Chen2010a,
+  author    = {Chen, D. and Schneider, N. and Das, D. and Smith, N. A.},
+  title     = {{SEMAFOR}: Frame argument resolution with log-linear models},
+  booktitle = {5th International Workshop on Semantic Evaluation},
+  year      = {2010},
+  pages     = {264-267},
+  owner     = {Vincent},
+  timestamp = {2019.04.09},
+  url       = {https://dl.acm.org/citation.cfm?id=1859723},
 }
 
 @Article{Chen2014d,
@@ -3058,6 +3160,17 @@
   timestamp = {2019.04.07},
 }
 
+@InProceedings{Collins2002,
+  author    = {Collins, M. and Duffy, N.},
+  title     = {New ranking algorithms for parsing and tagging: kernels over discrete structures, and the voted perceptron},
+  booktitle = {40th Annual Meeting on Association for Computational Linguistics},
+  year      = {2002},
+  pages     = {263-270},
+  owner     = {Vincent},
+  timestamp = {2019.04.09},
+  url       = {https://dl.acm.org/citation.cfm?id=1073128},
+}
+
 @InProceedings{Collins2009,
   author    = {Collins, C. and Viegas, F. B. and Wattenberg, M.},
   title     = {Parallel Tag Clouds to explore and analyze faceted text corpora},
@@ -3203,6 +3316,19 @@
   timestamp = {2019.04.08},
 }
 
+@Article{Cross2001,
+  author    = {Cross, R. and Parker, A. and Prusak, L. and Borgatti, S. P.},
+  title     = {Knowing what we know: Supporting knowledge creation and sharing in social networks},
+  journal   = {Organizational Dynamics},
+  year      = {2001},
+  volume    = {30},
+  number    = {2},
+  pages     = {100-120},
+  doi       = {10.1016/s0090-2616(01)00046-8},
+  owner     = {Vincent},
+  timestamp = {2019.04.09},
+}
+
 @Book{Csermely2006,
   title     = {Weak Links - Stabilizers of Complex Systems from Proteins to Social Networks},
   publisher = {Springer},
@@ -3250,6 +3376,17 @@
   owner        = {Vincent},
   review       = {Dead link},
   timestamp    = {2016.06.03},
+}
+
+@InProceedings{Culotta2004,
+  author    = {Culotta, A. and Sorensen, J.},
+  title     = {Dependency tree kernels for relation extraction},
+  booktitle = {42nd Annual Meeting on Association for Computational Linguistics},
+  year      = {2004},
+  pages     = {423},
+  doi       = {10.3115/1218955.1219009},
+  owner     = {Vincent},
+  timestamp = {2019.04.09},
 }
 
 @Book{Cunningham2000,
@@ -5604,7 +5741,7 @@
 
 @InProceedings{Grishman2005,
   author    = {Grishman, R. and Westbrook, D. and Meyers, A},
-  title     = {Nyu’s english {ACE} 2005 system description},
+  title     = {{NYU}'s english {ACE} 2005 system description},
   booktitle = {ACE Evaluation Workshop},
   year      = {2005},
   owner     = {Vincent},
@@ -5730,6 +5867,17 @@
   timestamp = {2010.06.03},
 }
 
+@InProceedings{GuoDong2005,
+  author    = {Zhou, G. D. and Su, J. and Zhang, J. and Zhang, M.},
+  title     = {Exploring various knowledge in relation extraction},
+  booktitle = {43rd Annual Meeting on Association for Computational Linguistics},
+  year      = {2005},
+  pages     = {427-434},
+  doi       = {10.3115/1219840.1219893},
+  owner     = {Vincent},
+  timestamp = {2019.04.09},
+}
+
 @InProceedings{Ha2015,
   author    = {Ha, J.-W. and Kim, K.-M. and Zhang, B.-T.},
   title     = {Automated construction of visual-linguistic knowledge via concept learning from cartoon videos},
@@ -5761,6 +5909,16 @@
   owner     = {Vincent},
   timestamp = {2019.03.30},
   url       = {https://www.osti.gov/biblio/960616},
+}
+
+@Book{Hage1983,
+  title     = {Structural Models in Anthropology},
+  publisher = {Cambridge University Press},
+  year      = {1983},
+  author    = {Hage, P. and Harary, F.},
+  owner     = {Vincent},
+  timestamp = {2017.05.31},
+  url       = {http://www.cambridge.org/catalogue/catalogue.asp?isbn=0521273110},
 }
 
 @Article{Halkidi2002,
@@ -5858,6 +6016,17 @@
   url       = {http://faculty.ucr.edu/~hanneman},
 }
 
+@InProceedings{Harabagiu2005,
+  author    = {Harabagiu, S. and Bejan, C. A. and Morarescu, P.},
+  title     = {Shallow semantics for relation extraction},
+  booktitle = {19th international joint conference on Artificial intelligence},
+  year      = {2005},
+  pages     = {1061-1066},
+  owner     = {Vincent},
+  timestamp = {2019.04.09},
+  url       = {https://dl.acm.org/citation.cfm?id=1642463},
+}
+
 @Book{Harary1969,
   title     = {Graph Theory},
   publisher = {Addison-Wesley},
@@ -5919,6 +6088,17 @@
   author    = {Hauge, M.},
   owner     = {Vincent},
   timestamp = {2019.04.07},
+}
+
+@TechReport{Haussler1999,
+  author      = {Haussler, D.},
+  title       = {Convolution kernels on discrete structures},
+  institution = {University of California at Santa Cruz},
+  year        = {1999},
+  type        = {Technical Report},
+  owner       = {Vincent},
+  timestamp   = {2019.04.09},
+  url         = {https://www.semanticscholar.org/paper/Convolution-Kernels-on-Discrete-Structures-Haussler/5ee0d8aeb2cb01ef4d8a858d234e72a7400c03ac},
 }
 
 @Article{Hawes2009,
@@ -6717,6 +6897,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.jstor.org/stable/10.5406/j.ctt2jcc3m},
 }
 
+@InCollection{Johnson1994,
+  author    = {Johnson, J.},
+  title     = {Anthropological Contributions to the Study of Social Networks: A Review},
+  booktitle = {Advances in Social Network Analysis: Research in the Social and Behavioral Sciences},
+  publisher = {SAGE Publications},
+  year      = {1994},
+  chapter   = {5},
+  pages     = {113-151},
+  doi       = {10.4135/9781452243528.n5},
+  owner     = {Vincent},
+  timestamp = {2019.04.09},
+}
+
 @Article{Johnson2010,
   author    = {Johnson, S. and Torres, J. J. and Marro, J. and Miguel Muñoz, A.},
   title     = {Entropic Origin of Disassortativity in Complex Networks},
@@ -6892,6 +7085,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.05},
   url       = {https://arxiv.org/abs/1109.0220},
+}
+
+@InProceedings{Kambhatla2004,
+  author    = {Kambhatla, N.},
+  title     = {Combining lexical, syntactic, and semantic features with maximum entropy models for extracting relations},
+  booktitle = {ACL Interactive poster and demonstration sessions},
+  year      = {2004},
+  pages     = {22},
+  doi       = {10.3115/1219044.1219066},
+  owner     = {Vincent},
+  timestamp = {2019.04.09},
 }
 
 @InProceedings{Karlgren1994,
@@ -7189,6 +7393,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://books.google.fr/books/about/Beowulf_and_The_Fight_at_Finnsburg.html?id=zcw6AAAAMAAJ&redir_esc=y},
 }
 
+@InProceedings{Klein2003,
+  author    = {Klein, D. and Manning, C. D.},
+  title     = {Accurate unlexicalized parsing},
+  booktitle = {41st Annual Meeting on Association for Computational Linguistics},
+  year      = {2003},
+  pages     = {423-430},
+  doi       = {10.3115/1075096.1075150},
+  owner     = {Vincent},
+  timestamp = {2019.04.09},
+}
+
 @Article{Kleinberg1999,
   author    = {Kleinberg, J.},
   title     = {Authoritative sources in a hyperlinked environment},
@@ -7225,6 +7440,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.nap.edu/catalog/10328/ecological-dynamics-on-yellowstones-northern-range},
 }
 
+@InProceedings{Klimt2004,
+  author    = {Klimt, B. and Yang, Y.},
+  title     = {Introducing the {Enron} corpus},
+  booktitle = {1st Conference on Email and Anti-Spam},
+  year      = {2004},
+  owner     = {Vincent},
+  timestamp = {2019.04.09},
+  url       = {https://bklimt.com/papers/2004_klimt_ceas.pdf},
+}
+
 @Book{Knoke1982,
   title     = {Network Analysis},
   publisher = {Sage},
@@ -7232,6 +7457,15 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   author    = {Knoke, D. and Kuklinski, J. H.},
   owner     = {Vincent},
   timestamp = {2019.04.06},
+}
+
+@Book{Knoke1990,
+  title     = {Political Networks: The structural perspective},
+  publisher = {Cambridge University Press},
+  year      = {1990},
+  author    = {Knoke, D.},
+  owner     = {Vincent},
+  timestamp = {2019.04.09},
 }
 
 @Book{Knuth1993,
@@ -7252,6 +7486,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   author    = {Koch, S.},
   owner     = {Vincent},
   timestamp = {2019.04.06},
+}
+
+@Article{Koehly1998,
+  author    = {Koehly, L. M. and Shivy, V. A.},
+  title     = {Social network analysis: A new methodology for counseling research.},
+  journal   = {Journal of Counseling Psychology},
+  year      = {1998},
+  volume    = {45},
+  number    = {1},
+  pages     = {3-17},
+  doi       = {10.1037/0022-0167.45.1.3},
+  owner     = {Vincent},
+  timestamp = {2019.04.09},
 }
 
 @InProceedings{Kokkinakis2004,
@@ -7956,6 +8203,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1080/15427951.2009.10129177},
   owner     = {Vincent},
   timestamp = {2011.02.08},
+}
+
+@InProceedings{Leskovec2010b,
+  author    = {Leskovec, J. and Huttenlocher, D. and Kleinberg, J.},
+  title     = {Signed Networks in Social Media},
+  booktitle = {ACM SIGCHI Conference on Human Factors in Computing Systems},
+  year      = {2010},
+  pages     = {1361-1370},
+  doi       = {10.1145/1753326.1753532},
+  owner     = {Vincent},
+  timestamp = {2013.03.11},
 }
 
 @Book{Lethbridge2003,
@@ -9516,6 +9774,20 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://searchworks.stanford.edu/view/10352032},
 }
 
+@InProceedings{Mori2006,
+  author    = {Mori, J. and Tsujishitan, T. and Matsuo, Y. and Ishizuka, M.},
+  title     = {Extracting Relations in Social Networks from the Web Using Similarity Between Collective Contexts},
+  booktitle = {International Semantic Web Conference},
+  year      = {2006},
+  volume    = {4273},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {487--500},
+  publisher = {Springer},
+  doi       = {10.1007/11926078_35},
+  owner     = {Vincent},
+  timestamp = {2019.04.09},
+}
+
 @InProceedings{Moriyama2016,
   author    = {Moriyama, Y. and Park, B. and Iwaoki, S. and Matsushita, M.},
   title     = {Designing A Question-Answering System for Comic Contents},
@@ -9536,6 +9808,28 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/enic.2016.014},
   owner     = {Vincent},
   timestamp = {2019.03.30},
+}
+
+@InProceedings{Moschitti2006,
+  author    = {Moschitti, A.},
+  title     = {Efficient Convolution Kernels for Dependency and Constituent Syntactic Trees},
+  booktitle = {European Conference on Machine Learning},
+  year      = {2006},
+  volume    = {4212},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {318-329},
+  doi       = {10.1007/11871842_32},
+  owner     = {Vincent},
+  timestamp = {2019.04.09},
+}
+
+@InProceedings{Moschitti2006a,
+  author    = {Moschitti, A.},
+  title     = {Making tree kernels practical for natural language learning},
+  booktitle = {11st Conference of the European Chapter of the Association for Computational Linguistics},
+  year      = {2006},
+  owner     = {Vincent},
+  timestamp = {2019.04.09},
 }
 
 @Book{Mostellar1984,
@@ -10184,6 +10478,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   groups    = {Raw Data},
   owner     = {Vincent},
   timestamp = {2019.03.13},
+}
+
+@InProceedings{Nguyen2009,
+  author    = {Nguyen, T.-V. T. and Moschitti, A. and Riccardi, G.},
+  title     = {Convolution kernels on constituent, dependency and sequential structures for relation extraction},
+  booktitle = {Conference on Empirical Methods in Natural Language Processing},
+  year      = {2009},
+  owner     = {Vincent},
+  timestamp = {2019.04.09},
+  url       = {https://dl.acm.org/citation.cfm?id=1699684},
 }
 
 @InProceedings{Nguyen2017a,
@@ -10995,6 +11299,32 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://mitpress.mit.edu/books/honest-signals},
 }
 
+@Article{Perry1979,
+  author    = {Perry, M.},
+  title     = {Literary Dynamics: How the Order of a Text Creates Its Meanings [With an Analysis of Faulkner's ``A Rose for Emily'']},
+  journal   = {Poetics Today},
+  year      = {1979},
+  volume    = {1},
+  number    = {1/2},
+  pages     = {35-64+311-361},
+  doi       = {10.2307/1772040},
+  owner     = {Vincent},
+  timestamp = {2019.04.09},
+}
+
+@Article{Perry-Smith2003,
+  author    = {Perry-Smith, J. E. and Shalley, C. E.},
+  title     = {The Social Side of Creativity: A Static and Dynamic Social Network Perspective},
+  journal   = {Academy of Management Review},
+  year      = {2003},
+  volume    = {28},
+  number    = {1},
+  pages     = {89-106},
+  doi       = {10.5465/amr.2003.8925236},
+  owner     = {Vincent},
+  timestamp = {2019.04.09},
+}
+
 @Article{Petermann2004,
   author    = {Petermann, T. and De Los Rios, P.},
   title     = {Role of clustering and gridlike ordering in epidemic spreading},
@@ -11097,6 +11427,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.03},
   url       = {https://press.princeton.edu/titles/8150.html},
+}
+
+@InProceedings{Plank2013,
+  author    = {Plank, B. and Moschitti, A.},
+  title     = {Embedding semantic similarity in tree kernels for domain adaptation of relation extraction},
+  booktitle = {51st Annual Meeting of the Association for Computational Linguistics},
+  year      = {2013},
+  pages     = {1498-1507},
+  owner     = {Vincent},
+  timestamp = {2019.04.09},
+  url       = {https://aclweb.org/anthology/papers/P/P13/P13-1147/},
 }
 
 @InProceedings{Plantie2010,
@@ -11205,6 +11546,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   review    = {http://arxiv.org/abs/1602.07275},
   timestamp = {2016.03.01},
+}
+
+@InProceedings{Prez2006,
+  author    = {Pérez, J. and Arenas, M. and Gutierrez, C.},
+  title     = {Semantics and Complexity of {SPARQL}},
+  booktitle = {International Semantic Web Conference},
+  year      = {2006},
+  volume    = {4273},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {30-43},
+  doi       = {10.1007/11926078_3},
+  owner     = {Vincent},
+  timestamp = {2019.04.09},
 }
 
 @Electronic{Pudney2014,
@@ -11939,6 +12293,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.07},
 }
 
+@InProceedings{Rowe2007,
+  author    = {Rowe, R. and Creamer, G. and Hershkop, S. and Stolfo, S. J.},
+  title     = {Automated social hierarchy detection through email network analysis},
+  booktitle = {9th WebKDD and 1st SNA-KDD Workshop on Web mining and social network analysis},
+  year      = {2007},
+  doi       = {10.1145/1348549.1348562},
+  owner     = {Vincent},
+  timestamp = {2019.04.09},
+}
+
 @Article{Roweis2000,
   author    = {Roweis, S. T.},
   title     = {Nonlinear Dimensionality Reduction by Locally Linear Embedding},
@@ -12268,6 +12632,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2018.05.24},
 }
 
+@Article{Sanjek1974,
+  author    = {Sanjek, R.},
+  title     = {What is network analysis, and what is it good for?},
+  journal   = {Reviews in Anthropology},
+  year      = {1974},
+  volume    = {1},
+  number    = {4},
+  pages     = {588-597},
+  doi       = {10.1080/00988157.1974.9977130},
+  owner     = {Vincent},
+  timestamp = {2019.04.09},
+}
+
 @Article{Sarkar2005,
   author    = {Sarkar, P. and Moore, A. W.},
   title     = {Dynamic social network analysis using latent space models},
@@ -12425,6 +12802,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2010.12.24},
 }
 
+@Article{Seidman1985,
+  author    = {Seidman, S. B.},
+  title     = {Structural consequences of individual position in nondyadic social networks},
+  journal   = {Journal of Mathematical Psychology},
+  year      = {1985},
+  volume    = {29},
+  number    = {4},
+  pages     = {367-386},
+  doi       = {10.1016/0022-2496(85)90001-x},
+  owner     = {Vincent},
+  timestamp = {2019.04.09},
+}
+
 @InProceedings{Sekine2004,
   author    = {Sekine, S.},
   title     = {Definition, Dictionaries and Tagger for Extended Named Entity Hierarchy},
@@ -12533,6 +12923,31 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://trove.nla.gov.au/work/25836193?q&versionId=31135080},
 }
 
+@Article{Shaw1954,
+  author    = {Shaw, M. E.},
+  title     = {Group structure and the behavior of individuals in small groups},
+  journal   = {Journal Of Psychology},
+  year      = {1954},
+  volume    = {38},
+  pages     = {139-149},
+  doi       = {10.1080/00223980.1954.9712925},
+  owner     = {Vincent},
+  timestamp = {2017.10.26},
+}
+
+@Article{Shimbel1953,
+  author    = {Shimbel, A.},
+  title     = {Structural parameters of communication networks},
+  journal   = {Bulletin of Mathematical Biophysics},
+  year      = {1953},
+  volume    = {15},
+  number    = {4},
+  pages     = {501-507},
+  doi       = {10.1007/bf02476438},
+  owner     = {Vincent},
+  timestamp = {2019.04.09},
+}
+
 @InProceedings{Shirai2016,
   author    = {Shirai, A.},
   title     = {Manga Generator, a future of interactive manga media},
@@ -12581,6 +12996,15 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url          = {http://giorasimchoni.com/2017/06/04/2017-06-04-the-one-with-friends/},
   owner        = {Vincent},
   timestamp    = {2018.11.11},
+}
+
+@Book{Simmel1950,
+  title     = {The Sociology of Georg Simmel},
+  publisher = {The Free Press},
+  year      = {1950},
+  author    = {Simmel, G.},
+  owner     = {Vincent},
+  timestamp = {2019.04.09},
 }
 
 @Article{Simons2008,
@@ -12894,6 +13318,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.18483/ijSci.312},
   owner     = {Vincent},
   timestamp = {2015.11.19},
+}
+
+@Article{Sparrow1991,
+  author    = {Sparrow, M. K.},
+  title     = {The application of network analysis to criminal intelligence: An assessment of the prospects},
+  journal   = {Social Networks},
+  year      = {1991},
+  volume    = {13},
+  number    = {3},
+  pages     = {251-274},
+  doi       = {10.1016/0378-8733(91)90008-h},
+  owner     = {Vincent},
+  timestamp = {2019.04.09},
 }
 
 @InProceedings{Srivastava2016,
@@ -13353,6 +13790,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp    = {2019.02.20},
 }
 
+@InProceedings{Tang2008,
+  author    = {Tang, J. and Zhang, J. and Yao, L. and Li, J. and Zhang, L. and Su, Z.},
+  title     = {{ArnetMiner}: extraction and mining of academic social networks},
+  booktitle = {14th ACM SIGKDD international conference on Knowledge discovery and data mining},
+  year      = {2008},
+  pages     = {990-998},
+  doi       = {10.1145/1401890.1402008},
+  owner     = {Vincent},
+  timestamp = {2019.04.09},
+}
+
 @InProceedings{Tang2009,
   author    = {Tang, L.-X. and Mei, T. and Hua, X.-S.},
   title     = {Near-lossless video summarization},
@@ -13527,6 +13975,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/cvpr.2012.6247821},
   owner     = {Vincent},
   timestamp = {2019.04.06},
+}
+
+@Article{Tichy1979,
+  author    = {Tichy, N. M. and Tushman, M. L. and Fombrun, C.},
+  title     = {Social Network Analysis For Organizations},
+  journal   = {Academy of Management Review},
+  year      = {1979},
+  volume    = {4},
+  number    = {4},
+  pages     = {507-519},
+  doi       = {10.5465/amr.1979.4498309},
+  owner     = {Vincent},
+  timestamp = {2019.04.09},
 }
 
 @InProceedings{Titov2008,
@@ -14086,6 +14547,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1023/b:visi.0000013087.49260.fb},
   owner     = {Vincent},
   timestamp = {2019.03.27},
+}
+
+@Article{Vishwanathan2010,
+  author    = {Vishwanathan, S. V. N. and Schraudolph, N. N. and Kondor, R. and Borgwardt, K. M.},
+  title     = {Graph Kernels},
+  journal   = {Journal of Machine Learning Research},
+  year      = {2010},
+  volume    = {11},
+  pages     = {1201-1242},
+  owner     = {Vincent},
+  timestamp = {2019.04.09},
+  url       = {https://dl.acm.org/citation.cfm?id=1859891},
 }
 
 @InProceedings{Viswanath2009,
@@ -15128,6 +15601,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.07},
 }
 
+@Article{Zelenko2003,
+  author    = {Zelenko, D. and Aone, C. and Richardella, A.},
+  title     = {Kernel methods for relation extraction},
+  journal   = {Journal of Machine Learning Research},
+  year      = {2003},
+  pages     = {1083-1106},
+  owner     = {Vincent},
+  timestamp = {2019.04.09},
+  url       = {https://dl.acm.org/citation.cfm?id=944964},
+}
+
 @InProceedings{Zeng2014,
   author    = {Zeng, W. and Li, C. and Feng, B. and Yang, N. and Luo, Q.},
   title     = {Discovering Most Influential Social Networks Nodes Based on Floating Influence},
@@ -15218,6 +15702,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1145/954339.954342},
   owner     = {Vincent},
   timestamp = {2019.03.22},
+}
+
+@InProceedings{Zhao2005,
+  author    = {Zhao, S. and Grishman, R.},
+  title     = {Extracting relations with integrated information using kernel methods},
+  booktitle = {43rd Annual Meeting on Association for Computational Linguistics},
+  year      = {2005},
+  pages     = {419-426},
+  doi       = {10.3115/1219840.1219892},
+  owner     = {Vincent},
+  timestamp = {2019.04.09},
 }
 
 @InProceedings{Zhao2006,
